# GaussDB-SQLAlchemy-Python-Driver

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: GaussDB差异清单.md  Windows测试指导手册.md  兼容性声明.md  常见问题.md  真实库测试说明.md  验证记录.md
examples/: sqlalchemy_quickstart.py
scripts/: check_windows_env.py  live_odbc_test.py  run_integration_probe.py  run_syntax_probe.py
src/gaussdb_sqlalchemy/: __init__.py  alembic.py  base.py  jdbc.py  odbc.py  odbc_dbapi.py
tests/: .env.example  conftest.py  test_alembic.py  test_base.py  test_config.py  test_edge_cases10.py  test_edge_cases11.py  test_edge_cases12.py  test_edge_cases5.py  test_edge_cases6.py  test_edge_cases7.py  test_edge_cases8.py  test_edge_cases9.py  test_integration_env.py  test_jdbc.py  test_odbc.py  test_project_metadata.py
