[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussdb-sqlalchemy-python-driver"
version = "0.2.0"
description = "SQLAlchemy ODBC dialect for Huawei GaussDB centralized."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "GaussDB Python Driver Contributors" }]
keywords = ["gaussdb", "sqlalchemy", "database", "driver", "odbc", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "SQLAlchemy>=2.0,<2.2",
    "pyodbc>=5.0",
]

[project.optional-dependencies]
test = [
    "alembic>=1.13",
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/jarrenL/GaussDB-SQLAlchemy-Python-Driver"
Issues = "https://github.com/jarrenL/GaussDB-SQLAlchemy-Python-Driver/issues"

[project.entry-points."sqlalchemy.dialects"]
gaussdb = "gaussdb_sqlalchemy.odbc:GaussDBDialect_odbc"
"gaussdb.odbc" = "gaussdb_sqlalchemy.odbc:GaussDBDialect_odbc"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
    "integration: tests that require a live GaussDB database",
]
